    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

    ==> 198 - 10/05/2007 <==

- <mave> removed deprecated methods: MatrixLinker::getRows() and getCols()
B <mave> adjusted Doxygen documentation; now all methods are displayed corretcly
C <mave> MatrixLinker is now Abstract; use DotLinker
+ <mave> added a method RealVec::neg() but with different signature that old VectorData::neg()
- <mave> removed the method VectorData::neg()
C <mave> changes in Doxygen documentation

    ==> 192 - 20/04/2007 - 0.8.1 release <==

+ <mave> added two method for convenience: BaseNeuralNet::addInputCluster and addOutputCluster
- <mave> removed template method BaseNeuralNet::byName
C <mave> moved VectorData::sum() to RealVec::sum()

    ==> 177 - 20/04/2007 - 0.8.0 release <==

C <mave> Cluster::size() renamed into numNeurons()

    ==> 176 - 20/04/2007 <==

B <mave> bugfix in assignment operator of RealVec and VectorData
+ <mave> added LeakyIntegratorFunction

    ==> 169 - 12/04/2007 - 0.7.2 release <==

+ <mave> added support for Windows; created Installer

    ==> 156 - 28/03/2007 - 0.7.1 release <==

+ <mave> various bugfixes; Important bugfix in XML save/load

    ==> 146 - 5/02/2007 - 0.7.0 release <==

+ <mave> added Outer-product, thanks to Francesco

    ==> 145 - 5/02/2007 <==

+ <mave> added another Random::flatInt method

    ==> 143/144 - 4/01/2007 <==

B <mave> bugfix in nnfw-config script generation
+ <mave> added nnfw-config script for Linux users

    ==> 142 - 4/01/2007 <==

C <mave> implemented Random::gauss with GSL library
B <mave> correct wrong initialization in switch

    ==> 141 - 29/11/2006 <==
